2009-08-21  Corinna Vinschen  <corinna@vinschen.de>

	* mmap.cc (mmap64): Allocate fh_disk_file on cygheap.  Delete
	explicitely before returning.

2009-08-20  Corinna Vinschen  <corinna@vinschen.de>

	* dtable.cc (build_fh_dev): Take additional bool parameter indicating
	whether set_name should be called or not.
	(dtable::dup_worker): Call build_fh_pc with new second parameter set
	to false.  Explain why.  If fhandler's dup failed, delete rather than
	cfree newfh and set newfh to NULL to indicate failure correctly.
	* dtable.h (build_fh_pc): Change declaration according to above change.
	Default set_name parameter to true.
	* mmap.cc (mmap_record::free_fh): Delete rather than cfree fh.

2009-08-18  Christopher Faylor  <me+cygwin@cgf.cx>

	* dtable.cc (dtable::fixup_after_exec): Close any popen'ed file handles here.
	* fhandler.h (fhandler_*::ispipe): New function.
	(fhandler_base::get_popen_pid): Define virtual function.
	(fhandler_*::isdevice): Make const.
	(fhandler_*::isfifo): Ditto.

2009-08-17  Christopher Faylor  <me+cygwin@cgf.cx>

	* syscalls.cc (popen): Reorganize slightly for clarity.  Fix a comment.

2009-08-17  Christopher Faylor  <me+cygwin@cgf.cx>

	* syscalls.cc (popen): Rewrite to accommodate situations where stdin,
	stdout, or stderr are closed.

2009-08-17  Christopher Faylor  <me+cygwin@cgf.cx>

	* pipe.cc (fhandler_pipe::create_selectable): Add -pipe to default pipe names.

	* lib/_cygwin_crt0_common.cc (_cygwin_crt0_common): Use bool/true/false
	for what is actually a boolean variable.

2009-08-14  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_disk_file::readdir): Fix length
	check for ".." dir.

2009-08-14  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_disk_file::readdir): Change comment
	to be fair.

2009-08-14  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_disk_file::readdir_helper): Remove